# oracle-example

./: .gitignore  Cargo.toml  README.md
anchor/: Anchor.toml  Cargo.toml
anchor/client/: sdk.ts
anchor/programs/risk_oracle_anchor/: Cargo.toml
anchor/programs/risk_oracle_anchor/src/: lib.rs
client/: package-lock.json  package.json  sdk.ts  tests.ts  tsconfig.json
pinocchio/: .gitignore  Cargo.toml
pinocchio/client/: package-lock.json  package.json  sdk.ts
pinocchio/programs/risk_oracle_pinocchio/: Cargo.toml
pinocchio/programs/risk_oracle_pinocchio/src/: entrypoint.rs
program/: Cargo.toml
program/src/: consts.rs  entrypoint.rs  lib.rs
programs/risk_oracle_pinoccchio/: Cargo.toml
programs/risk_oracle_pinoccchio/src/: entrypoint.rs  lib.rs
